// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-copy-to-clipboard> Component basic usage with attributes 1`] = `
<bolt-copy-to-clipboard data-attr="some attribute">
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m30.3 4.3-2.6-2.6c-1.1-1.1-2.4-1.7-4-1.7s-2.9.5-4 1.6l-2.7 2.8c-.4.3-.6.7-.6 1.1s.2.8.5 1.2c.7.7 1.7.6 2.3 0l2.8-2.8c.4-.4 1-.6 1.7-.6s1.3.2 1.7.7l2.6 2.6c.5.4.7 1 .7 1.7s-.2 1.3-.7 1.7l-8.7 8.7c-.5.5-1.1.8-2 .8-.8 0-1.4-.1-1.8-.6l-1.1-1.1-.9-.9c-.4-.4-.8-.6-1.2-.6s-.8.2-1.1.5c-.4.3-.6.7-.6 1.1s.2.8.6 1.2l1.9 1.9.5.4c.9.8 2.1 1.1 3.4 1.1h.2c1.3 0 2.4-.4 3.3-1.1 0 0 .7-.4.7-.5l8.9-8.9c1-1.1 1.6-2.4 1.6-4 .3-1.3-.3-2.7-1.4-3.7m-15.3 20.9c.4.4.6.8.6 1.2s-.2.8-.5 1.2l-2.7 2.7c-1.1 1.1-2.4 1.6-4 1.6-1.5 0-2.9-.5-4-1.6l-2.8-2.8c-1.1-1.1-1.6-2.5-1.6-4s.5-2.9 1.6-3.9l9.1-9.1c1.1-1 2.4-1.5 3.9-1.5s2.9.5 3.9 1.6l2.1 2.1c.4.3.6.7.6 1.1s-.2.8-.6 1.2c-.6.6-1.7.6-2.3 0l-2.1-2.1c-.9-.9-2.4-.9-3.3 0l-9 9c-.4.5-.7 1-.7 1.7 0 .6.2 1.2.7 1.6l2.8 2.8c.9.9 2.4.9 3.3 0l2.7-2.8c.2-.2.6-.4 1.1-.4s.9.2 1.2.4"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <g transform="translate(0 1.5)">
            <path d="m32 3.8c0-.7-.6-1.3-1.3-1.3s-1.3.6-1.3 1.3v4.9l-3.9-3.7c-2.5-2.5-5.9-3.9-9.4-3.9-2.8 0-5.5.9-7.7 2.5-2.4 1.6-4 3.8-5 6.4-.3.7.1 1.5.8 1.7s1.5-.1 1.7-.8c.8-2.1 2.1-3.8 3.9-5.1s3.9-2 6.2-2c2.9 0 5.5 1.1 7.5 3.1l3.7 3.5h-4.6c-.7 0-1.3.6-1.3 1.3s.6 1.3 1.3 1.3h8 .1c.1 0 .2 0 .3-.1.2-.1.4-.2.5-.3s.2-.3.3-.4 0 0 0 0c0-.1.1-.2.1-.3s0 0 0 0z">
            </path>
            <path d="m27.7 17.3c-.7-.3-1.5.1-1.7.8-1.5 4.2-5.6 7-10 7-2.8 0-5.5-1.1-7.5-3.1l-3.7-3.5h4.6c.7 0 1.3-.6 1.3-1.3s-.6-1.3-1.3-1.3h-8c-.2 0-.4 0-.6.1s0 0 0 0c-.1.1-.2.1-.3.2s0 0 0 0l-.1.1c-.1.1-.1.2-.2.3-.1.3-.2.3-.2.5v8c0 .7.6 1.3 1.3 1.3s1.3-.6 1.3-1.3v-4.9l3.9 3.8c2.5 2.5 5.9 3.9 9.4 3.9 5.6 0 10.6-3.5 12.5-8.8.4-.8 0-1.6-.7-1.8z">
            </path>
          </g>
        </svg>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m29 5-18.3 18.3-7.7-7.7c-.7-.7-1.8-.7-2.5 0s-.7 1.8 0 2.5l8.9 8.9c.3.3.8.5 1.3.5s.9-.2 1.3-.5l19.5-19.5c.7-.7.7-1.8 0-2.5s-1.8-.7-2.5 0z"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom confirmation text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m30.3 4.3-2.6-2.6c-1.1-1.1-2.4-1.7-4-1.7s-2.9.5-4 1.6l-2.7 2.8c-.4.3-.6.7-.6 1.1s.2.8.5 1.2c.7.7 1.7.6 2.3 0l2.8-2.8c.4-.4 1-.6 1.7-.6s1.3.2 1.7.7l2.6 2.6c.5.4.7 1 .7 1.7s-.2 1.3-.7 1.7l-8.7 8.7c-.5.5-1.1.8-2 .8-.8 0-1.4-.1-1.8-.6l-1.1-1.1-.9-.9c-.4-.4-.8-.6-1.2-.6s-.8.2-1.1.5c-.4.3-.6.7-.6 1.1s.2.8.6 1.2l1.9 1.9.5.4c.9.8 2.1 1.1 3.4 1.1h.2c1.3 0 2.4-.4 3.3-1.1 0 0 .7-.4.7-.5l8.9-8.9c1-1.1 1.6-2.4 1.6-4 .3-1.3-.3-2.7-1.4-3.7m-15.3 20.9c.4.4.6.8.6 1.2s-.2.8-.5 1.2l-2.7 2.7c-1.1 1.1-2.4 1.6-4 1.6-1.5 0-2.9-.5-4-1.6l-2.8-2.8c-1.1-1.1-1.6-2.5-1.6-4s.5-2.9 1.6-3.9l9.1-9.1c1.1-1 2.4-1.5 3.9-1.5s2.9.5 3.9 1.6l2.1 2.1c.4.3.6.7.6 1.1s-.2.8-.6 1.2c-.6.6-1.7.6-2.3 0l-2.1-2.1c-.9-.9-2.4-.9-3.3 0l-9 9c-.4.5-.7 1-.7 1.7 0 .6.2 1.2.7 1.6l2.8 2.8c.9.9 2.4.9 3.3 0l2.7-2.8c.2-.2.6-.4 1.1-.4s.9.2 1.2.4"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <g transform="translate(0 1.5)">
            <path d="m32 3.8c0-.7-.6-1.3-1.3-1.3s-1.3.6-1.3 1.3v4.9l-3.9-3.7c-2.5-2.5-5.9-3.9-9.4-3.9-2.8 0-5.5.9-7.7 2.5-2.4 1.6-4 3.8-5 6.4-.3.7.1 1.5.8 1.7s1.5-.1 1.7-.8c.8-2.1 2.1-3.8 3.9-5.1s3.9-2 6.2-2c2.9 0 5.5 1.1 7.5 3.1l3.7 3.5h-4.6c-.7 0-1.3.6-1.3 1.3s.6 1.3 1.3 1.3h8 .1c.1 0 .2 0 .3-.1.2-.1.4-.2.5-.3s.2-.3.3-.4 0 0 0 0c0-.1.1-.2.1-.3s0 0 0 0z">
            </path>
            <path d="m27.7 17.3c-.7-.3-1.5.1-1.7.8-1.5 4.2-5.6 7-10 7-2.8 0-5.5-1.1-7.5-3.1l-3.7-3.5h4.6c.7 0 1.3-.6 1.3-1.3s-.6-1.3-1.3-1.3h-8c-.2 0-.4 0-.6.1s0 0 0 0c-.1.1-.2.1-.3.2s0 0 0 0l-.1.1c-.1.1-.1.2-.2.3-.1.3-.2.3-.2.5v8c0 .7.6 1.3 1.3 1.3s1.3-.6 1.3-1.3v-4.9l3.9 3.8c2.5 2.5 5.9 3.9 9.4 3.9 5.6 0 10.6-3.5 12.5-8.8.4-.8 0-1.6-.7-1.8z">
            </path>
          </g>
        </svg>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      Custom confirmation
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom transition text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m30.3 4.3-2.6-2.6c-1.1-1.1-2.4-1.7-4-1.7s-2.9.5-4 1.6l-2.7 2.8c-.4.3-.6.7-.6 1.1s.2.8.5 1.2c.7.7 1.7.6 2.3 0l2.8-2.8c.4-.4 1-.6 1.7-.6s1.3.2 1.7.7l2.6 2.6c.5.4.7 1 .7 1.7s-.2 1.3-.7 1.7l-8.7 8.7c-.5.5-1.1.8-2 .8-.8 0-1.4-.1-1.8-.6l-1.1-1.1-.9-.9c-.4-.4-.8-.6-1.2-.6s-.8.2-1.1.5c-.4.3-.6.7-.6 1.1s.2.8.6 1.2l1.9 1.9.5.4c.9.8 2.1 1.1 3.4 1.1h.2c1.3 0 2.4-.4 3.3-1.1 0 0 .7-.4.7-.5l8.9-8.9c1-1.1 1.6-2.4 1.6-4 .3-1.3-.3-2.7-1.4-3.7m-15.3 20.9c.4.4.6.8.6 1.2s-.2.8-.5 1.2l-2.7 2.7c-1.1 1.1-2.4 1.6-4 1.6-1.5 0-2.9-.5-4-1.6l-2.8-2.8c-1.1-1.1-1.6-2.5-1.6-4s.5-2.9 1.6-3.9l9.1-9.1c1.1-1 2.4-1.5 3.9-1.5s2.9.5 3.9 1.6l2.1 2.1c.4.3.6.7.6 1.1s-.2.8-.6 1.2c-.6.6-1.7.6-2.3 0l-2.1-2.1c-.9-.9-2.4-.9-3.3 0l-9 9c-.4.5-.7 1-.7 1.7 0 .6.2 1.2.7 1.6l2.8 2.8c.9.9 2.4.9 3.3 0l2.7-2.8c.2-.2.6-.4 1.1-.4s.9.2 1.2.4"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      Custom transition text
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m29 5-18.3 18.3-7.7-7.7c-.7-.7-1.8-.7-2.5 0s-.7 1.8 0 2.5l8.9 8.9c.3.3.8.5 1.3.5s.9-.2 1.3-.5l19.5-19.5c.7-.7.7-1.8 0-2.5s-1.8-.7-2.5 0z"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger component 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <bolt-icon name="add-open"
                 size="medium"
                 background="circle"
                 aria-hidden="true"
      >
        <span class="c-bolt-icon c-bolt-icon--add-open c-bolt-icon--medium  has-background has-circle-background">
          <span class="c-bolt-icon__background-shape c-bolt-icon__background-shape--circle">
          </span>
          <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
          >
            <g fill="none"
               fill-rule="evenodd"
            >
              <path>
              </path>
              <g fill="var(--bolt-theme-icon, currentColor)">
                <path d="M12 21a9 9 0 110-18 9 9 0 010 18m0-20a11 11 0 100 22 11 11 0 000-22M16 11h-3V8c0-.5-.4-1-1-1a1 1 0 00-1 1v3H8a1 1 0 00-1 1c0 .6.5 1 1 1h3v3c0 .6.4 1 1 1s1-.4 1-1v-3h3c.6 0 1-.4 1-1s-.4-1-1-1">
                </path>
              </g>
            </g>
          </svg>
        </span>
      </bolt-icon>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <g transform="translate(0 1.5)">
            <path d="m32 3.8c0-.7-.6-1.3-1.3-1.3s-1.3.6-1.3 1.3v4.9l-3.9-3.7c-2.5-2.5-5.9-3.9-9.4-3.9-2.8 0-5.5.9-7.7 2.5-2.4 1.6-4 3.8-5 6.4-.3.7.1 1.5.8 1.7s1.5-.1 1.7-.8c.8-2.1 2.1-3.8 3.9-5.1s3.9-2 6.2-2c2.9 0 5.5 1.1 7.5 3.1l3.7 3.5h-4.6c-.7 0-1.3.6-1.3 1.3s.6 1.3 1.3 1.3h8 .1c.1 0 .2 0 .3-.1.2-.1.4-.2.5-.3s.2-.3.3-.4 0 0 0 0c0-.1.1-.2.1-.3s0 0 0 0z">
            </path>
            <path d="m27.7 17.3c-.7-.3-1.5.1-1.7.8-1.5 4.2-5.6 7-10 7-2.8 0-5.5-1.1-7.5-3.1l-3.7-3.5h4.6c.7 0 1.3-.6 1.3-1.3s-.6-1.3-1.3-1.3h-8c-.2 0-.4 0-.6.1s0 0 0 0c-.1.1-.2.1-.3.2s0 0 0 0l-.1.1c-.1.1-.1.2-.2.3-.1.3-.2.3-.2.5v8c0 .7.6 1.3 1.3 1.3s1.3-.6 1.3-1.3v-4.9l3.9 3.8c2.5 2.5 5.9 3.9 9.4 3.9 5.6 0 10.6-3.5 12.5-8.8.4-.8 0-1.6-.7-1.8z">
            </path>
          </g>
        </svg>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m29 5-18.3 18.3-7.7-7.7c-.7-.7-1.8-.7-2.5 0s-.7 1.8 0 2.5l8.9 8.9c.3.3.8.5 1.3.5s.9-.2 1.3-.5l19.5-19.5c.7-.7.7-1.8 0-2.5s-1.8-.7-2.5 0z"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m30.3 4.3-2.6-2.6c-1.1-1.1-2.4-1.7-4-1.7s-2.9.5-4 1.6l-2.7 2.8c-.4.3-.6.7-.6 1.1s.2.8.5 1.2c.7.7 1.7.6 2.3 0l2.8-2.8c.4-.4 1-.6 1.7-.6s1.3.2 1.7.7l2.6 2.6c.5.4.7 1 .7 1.7s-.2 1.3-.7 1.7l-8.7 8.7c-.5.5-1.1.8-2 .8-.8 0-1.4-.1-1.8-.6l-1.1-1.1-.9-.9c-.4-.4-.8-.6-1.2-.6s-.8.2-1.1.5c-.4.3-.6.7-.6 1.1s.2.8.6 1.2l1.9 1.9.5.4c.9.8 2.1 1.1 3.4 1.1h.2c1.3 0 2.4-.4 3.3-1.1 0 0 .7-.4.7-.5l8.9-8.9c1-1.1 1.6-2.4 1.6-4 .3-1.3-.3-2.7-1.4-3.7m-15.3 20.9c.4.4.6.8.6 1.2s-.2.8-.5 1.2l-2.7 2.7c-1.1 1.1-2.4 1.6-4 1.6-1.5 0-2.9-.5-4-1.6l-2.8-2.8c-1.1-1.1-1.6-2.5-1.6-4s.5-2.9 1.6-3.9l9.1-9.1c1.1-1 2.4-1.5 3.9-1.5s2.9.5 3.9 1.6l2.1 2.1c.4.3.6.7.6 1.1s-.2.8-.6 1.2c-.6.6-1.7.6-2.3 0l-2.1-2.1c-.9-.9-2.4-.9-3.3 0l-9 9c-.4.5-.7 1-.7 1.7 0 .6.2 1.2.7 1.6l2.8 2.8c.9.9 2.4.9 3.3 0l2.7-2.8c.2-.2.6-.4 1.1-.4s.9.2 1.2.4"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        <span class="c-bolt-copy-to-clipboard__action-text">
          This is custom trigger text
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <g transform="translate(0 1.5)">
            <path d="m32 3.8c0-.7-.6-1.3-1.3-1.3s-1.3.6-1.3 1.3v4.9l-3.9-3.7c-2.5-2.5-5.9-3.9-9.4-3.9-2.8 0-5.5.9-7.7 2.5-2.4 1.6-4 3.8-5 6.4-.3.7.1 1.5.8 1.7s1.5-.1 1.7-.8c.8-2.1 2.1-3.8 3.9-5.1s3.9-2 6.2-2c2.9 0 5.5 1.1 7.5 3.1l3.7 3.5h-4.6c-.7 0-1.3.6-1.3 1.3s.6 1.3 1.3 1.3h8 .1c.1 0 .2 0 .3-.1.2-.1.4-.2.5-.3s.2-.3.3-.4 0 0 0 0c0-.1.1-.2.1-.3s0 0 0 0z">
            </path>
            <path d="m27.7 17.3c-.7-.3-1.5.1-1.7.8-1.5 4.2-5.6 7-10 7-2.8 0-5.5-1.1-7.5-3.1l-3.7-3.5h4.6c.7 0 1.3-.6 1.3-1.3s-.6-1.3-1.3-1.3h-8c-.2 0-.4 0-.6.1s0 0 0 0c-.1.1-.2.1-.3.2s0 0 0 0l-.1.1c-.1.1-.1.2-.2.3-.1.3-.2.3-.2.5v8c0 .7.6 1.3 1.3 1.3s1.3-.6 1.3-1.3v-4.9l3.9 3.8c2.5 2.5 5.9 3.9 9.4 3.9 5.6 0 10.6-3.5 12.5-8.8.4-.8 0-1.6-.7-1.8z">
            </path>
          </g>
        </svg>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m29 5-18.3 18.3-7.7-7.7c-.7-.7-1.8-.7-2.5 0s-.7 1.8 0 2.5l8.9 8.9c.3.3.8.5 1.3.5s.9-.2 1.3-.5l19.5-19.5c.7-.7.7-1.8 0-2.5s-1.8-.7-2.5 0z"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger, transition, and confirmation text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      Custom trigger
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      Custom transition
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      Custom confirmation
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component multiple instances 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m30.3 4.3-2.6-2.6c-1.1-1.1-2.4-1.7-4-1.7s-2.9.5-4 1.6l-2.7 2.8c-.4.3-.6.7-.6 1.1s.2.8.5 1.2c.7.7 1.7.6 2.3 0l2.8-2.8c.4-.4 1-.6 1.7-.6s1.3.2 1.7.7l2.6 2.6c.5.4.7 1 .7 1.7s-.2 1.3-.7 1.7l-8.7 8.7c-.5.5-1.1.8-2 .8-.8 0-1.4-.1-1.8-.6l-1.1-1.1-.9-.9c-.4-.4-.8-.6-1.2-.6s-.8.2-1.1.5c-.4.3-.6.7-.6 1.1s.2.8.6 1.2l1.9 1.9.5.4c.9.8 2.1 1.1 3.4 1.1h.2c1.3 0 2.4-.4 3.3-1.1 0 0 .7-.4.7-.5l8.9-8.9c1-1.1 1.6-2.4 1.6-4 .3-1.3-.3-2.7-1.4-3.7m-15.3 20.9c.4.4.6.8.6 1.2s-.2.8-.5 1.2l-2.7 2.7c-1.1 1.1-2.4 1.6-4 1.6-1.5 0-2.9-.5-4-1.6l-2.8-2.8c-1.1-1.1-1.6-2.5-1.6-4s.5-2.9 1.6-3.9l9.1-9.1c1.1-1 2.4-1.5 3.9-1.5s2.9.5 3.9 1.6l2.1 2.1c.4.3.6.7.6 1.1s-.2.8-.6 1.2c-.6.6-1.7.6-2.3 0l-2.1-2.1c-.9-.9-2.4-.9-3.3 0l-9 9c-.4.5-.7 1-.7 1.7 0 .6.2 1.2.7 1.6l2.8 2.8c.9.9 2.4.9 3.3 0l2.7-2.8c.2-.2.6-.4 1.1-.4s.9.2 1.2.4"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link #1
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <g transform="translate(0 1.5)">
            <path d="m32 3.8c0-.7-.6-1.3-1.3-1.3s-1.3.6-1.3 1.3v4.9l-3.9-3.7c-2.5-2.5-5.9-3.9-9.4-3.9-2.8 0-5.5.9-7.7 2.5-2.4 1.6-4 3.8-5 6.4-.3.7.1 1.5.8 1.7s1.5-.1 1.7-.8c.8-2.1 2.1-3.8 3.9-5.1s3.9-2 6.2-2c2.9 0 5.5 1.1 7.5 3.1l3.7 3.5h-4.6c-.7 0-1.3.6-1.3 1.3s.6 1.3 1.3 1.3h8 .1c.1 0 .2 0 .3-.1.2-.1.4-.2.5-.3s.2-.3.3-.4 0 0 0 0c0-.1.1-.2.1-.3s0 0 0 0z">
            </path>
            <path d="m27.7 17.3c-.7-.3-1.5.1-1.7.8-1.5 4.2-5.6 7-10 7-2.8 0-5.5-1.1-7.5-3.1l-3.7-3.5h4.6c.7 0 1.3-.6 1.3-1.3s-.6-1.3-1.3-1.3h-8c-.2 0-.4 0-.6.1s0 0 0 0c-.1.1-.2.1-.3.2s0 0 0 0l-.1.1c-.1.1-.1.2-.2.3-.1.3-.2.3-.2.5v8c0 .7.6 1.3 1.3 1.3s1.3-.6 1.3-1.3v-4.9l3.9 3.8c2.5 2.5 5.9 3.9 9.4 3.9 5.6 0 10.6-3.5 12.5-8.8.4-.8 0-1.6-.7-1.8z">
            </path>
          </g>
        </svg>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m29 5-18.3 18.3-7.7-7.7c-.7-.7-1.8-.7-2.5 0s-.7 1.8 0 2.5l8.9 8.9c.3.3.8.5 1.3.5s.9-.2 1.3-.5l19.5-19.5c.7-.7.7-1.8 0-2.5s-1.8-.7-2.5 0z"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-2"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m30.3 4.3-2.6-2.6c-1.1-1.1-2.4-1.7-4-1.7s-2.9.5-4 1.6l-2.7 2.8c-.4.3-.6.7-.6 1.1s.2.8.5 1.2c.7.7 1.7.6 2.3 0l2.8-2.8c.4-.4 1-.6 1.7-.6s1.3.2 1.7.7l2.6 2.6c.5.4.7 1 .7 1.7s-.2 1.3-.7 1.7l-8.7 8.7c-.5.5-1.1.8-2 .8-.8 0-1.4-.1-1.8-.6l-1.1-1.1-.9-.9c-.4-.4-.8-.6-1.2-.6s-.8.2-1.1.5c-.4.3-.6.7-.6 1.1s.2.8.6 1.2l1.9 1.9.5.4c.9.8 2.1 1.1 3.4 1.1h.2c1.3 0 2.4-.4 3.3-1.1 0 0 .7-.4.7-.5l8.9-8.9c1-1.1 1.6-2.4 1.6-4 .3-1.3-.3-2.7-1.4-3.7m-15.3 20.9c.4.4.6.8.6 1.2s-.2.8-.5 1.2l-2.7 2.7c-1.1 1.1-2.4 1.6-4 1.6-1.5 0-2.9-.5-4-1.6l-2.8-2.8c-1.1-1.1-1.6-2.5-1.6-4s.5-2.9 1.6-3.9l9.1-9.1c1.1-1 2.4-1.5 3.9-1.5s2.9.5 3.9 1.6l2.1 2.1c.4.3.6.7.6 1.1s-.2.8-.6 1.2c-.6.6-1.7.6-2.3 0l-2.1-2.1c-.9-.9-2.4-.9-3.3 0l-9 9c-.4.5-.7 1-.7 1.7 0 .6.2 1.2.7 1.6l2.8 2.8c.9.9 2.4.9 3.3 0l2.7-2.8c.2-.2.6-.4 1.1-.4s.9.2 1.2.4"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link #2
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <g transform="translate(0 1.5)">
            <path d="m32 3.8c0-.7-.6-1.3-1.3-1.3s-1.3.6-1.3 1.3v4.9l-3.9-3.7c-2.5-2.5-5.9-3.9-9.4-3.9-2.8 0-5.5.9-7.7 2.5-2.4 1.6-4 3.8-5 6.4-.3.7.1 1.5.8 1.7s1.5-.1 1.7-.8c.8-2.1 2.1-3.8 3.9-5.1s3.9-2 6.2-2c2.9 0 5.5 1.1 7.5 3.1l3.7 3.5h-4.6c-.7 0-1.3.6-1.3 1.3s.6 1.3 1.3 1.3h8 .1c.1 0 .2 0 .3-.1.2-.1.4-.2.5-.3s.2-.3.3-.4 0 0 0 0c0-.1.1-.2.1-.3s0 0 0 0z">
            </path>
            <path d="m27.7 17.3c-.7-.3-1.5.1-1.7.8-1.5 4.2-5.6 7-10 7-2.8 0-5.5-1.1-7.5-3.1l-3.7-3.5h4.6c.7 0 1.3-.6 1.3-1.3s-.6-1.3-1.3-1.3h-8c-.2 0-.4 0-.6.1s0 0 0 0c-.1.1-.2.1-.3.2s0 0 0 0l-.1.1c-.1.1-.1.2-.2.3-.1.3-.2.3-.2.5v8c0 .7.6 1.3 1.3 1.3s1.3-.6 1.3-1.3v-4.9l3.9 3.8c2.5 2.5 5.9 3.9 9.4 3.9 5.6 0 10.6-3.5 12.5-8.8.4-.8 0-1.6-.7-1.8z">
            </path>
          </g>
        </svg>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <svg class="e-bolt-icon"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m29 5-18.3 18.3-7.7-7.7c-.7-.7-1.8-.7-2.5 0s-.7 1.8 0 2.5l8.9 8.9c.3.3.8.5 1.3.5s.9-.2 1.3-.5l19.5-19.5c.7-.7.7-1.8 0-2.5s-1.8-.7-2.5 0z"
                fill-rule="evenodd"
          >
          </path>
        </svg>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;
